pagination, config file & data seed
GetAll() results are wrapped into PagedResult struct that contains these properties: result (list of elements) and count (the size of the list). GetAll() accepts a struct named BaseSearchObject(page, pageSize) to enable users to input page and pageSize in order to perform pagination.
