# backend/controllers/base_controller.go
@@ -9,11 +9,11 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-type BaseController[T any, Tinsert any, Tupdate any] struct {
-	Service interfaces.ICRUDService[T, Tinsert, Tupdate]
+type BaseController[T any, Tinsert any, Tupdate any, Tsearch any] struct {
+	Service interfaces.ICRUDService[T, Tinsert, Tupdate, Tsearch]
 }
 
-func (ctrl *BaseController[T, Tinsert, Tupdate]) Create(c *gin.Context) {
+func (ctrl *BaseController[T, Tinsert, Tupdate, Tsearch]) Create(c *gin.Context) {
 	var input Tinsert
 	if err := c.ShouldBindJSON(&input); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
@@ -29,7 +29,7 @@ func (ctrl *BaseController[T, Tinsert, Tupdate]) Create(c *gin.Context) {
 	c.JSON(http.StatusCreated, entity)
 }
 
-func (ctrl *BaseController[T, Tinsert, Tupdate]) Update(c *gin.Context) {
+func (ctrl *BaseController[T, Tinsert, Tupdate, Tsearch]) Update(c *gin.Context) {
 	idParam := c.Param("id")
 	id, err := strconv.Atoi(idParam)
 	if err != nil {
@@ -52,16 +52,26 @@ func (ctrl *BaseController[T, Tinsert, Tupdate]) Update(c *gin.Context) {
 	c.JSON(http.StatusOK, entity)
 }
 
-func (ctrl *BaseController[T, Tinsert, Tupdate]) GetAll(c *gin.Context) {
-	entities, err := ctrl.Service.GetAll()
+func (ctrl *BaseController[T, Tinsert, Tupdate, Tsearch]) GetAll(c *gin.Context) {
+	var search Tsearch
+
+	// Bind query parameters to Tsearch struct (page, pageSize, filters)
+	if err := c.ShouldBindQuery(&search); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid query parameters"})
+		return
+	}
+
+	// Pass by value, not pointer
+	result, err := ctrl.Service.GetAll(&search)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
-	c.JSON(http.StatusOK, entities)
+
+	c.JSON(http.StatusOK, result)
 }
 
-func (ctrl *BaseController[T, Tinsert, Tupdate]) GetByID(c *gin.Context) {
+func (ctrl *BaseController[T, Tinsert, Tupdate, TSearch]) GetByID(c *gin.Context) {
 	idParam := c.Param("id")
 	id, err := strconv.Atoi(idParam)
 	if err != nil {
@@ -78,7 +88,7 @@ func (ctrl *BaseController[T, Tinsert, Tupdate]) GetByID(c *gin.Context) {
 	c.JSON(http.StatusOK, entity)
 }
 
-func (ctrl *BaseController[T, Tinsert, Tupdate]) Delete(c *gin.Context) {
+func (ctrl *BaseController[T, Tinsert, Tupdate, Tsearch]) Delete(c *gin.Context) {
 	idParam := c.Param("id")
 	id, err := strconv.Atoi(idParam)
 	if err != nil {
