# backend/models/paged_result.go
@@ -1,0 +1,6 @@
+package models
+
+type PagedResult[T any] struct {
+	Result []T `json:"result"`
+	Count  int `json:"count"`
+}
