# backend/models/search_objects/base_search_object.go
@@ -1,0 +1,6 @@
+package searchobjects
+
+type BaseSearchObject struct {
+	Page     *int `form:"page" json:"page"`
+	PageSize *int `form:"page_size" json:"page_size"`
+}
